Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.5, 5.15.0, 6.2.0
-
Windows 10
-
3ccba598bcea79a0cef5df526b49e5c18de4bf53 (qt/qtdeclarative/dev)
Description
TextMetrics.width does not always give a correct width for the given text and is sometimes too short depending on the font used. This only appears to reproduce on Windows and not with all fonts, in my case Arial and Arial Narrow showed up the issue.
Attachments
Issue Links
- is duplicated by
-
QTBUG-94023 TextMetrics width is not same as Text.implicitWidth
-
- Closed
-
- relates to
-
QTBUG-7768 fontMetrics.boundingRect() and drawText(boundingRect) disagree about text width metrics
-
- Closed
-
-
QTBUG-51024 QFontMetrics returns wrong boundingRect and width
-
- Closed
-
-
QTBUG-73002 QLabel::fontMetrics().boundingRect(text) != rendered width for some fonts
-
- Closed
-
-
QTBUG-15974 QFontMetrics::boundingRect() returns too-small result
-
- Closed
-
-
QTBUG-70184 QFontMetrics::tightBoundingRect doesn’t return correct width somtimes
-
- Closed
-